[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gen_kernel"
authors = [
    {name = "Steve Waggoner", email = "stwaggoner@gmail.com"},
]
readme = "README.md"
dependencies = ["pexpect (>=4.0)", "ipykernel"]
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/SteveWaggoner/gen_kernel"

